Add TeaVM Errai PoC with IOC support

--- a/teavm-errai-poc/teavm-errai-api/pom.xml
+++ b/teavm-errai-poc/teavm-errai-api/pom.xml
@@ -8,4 +8,12 @@
   </parent>
 
   <artifactId>teavm-errai-api</artifactId>
+
+  <dependencies>
+      <dependency>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+          <version>1</version>
+      </dependency>
+  </dependencies>
 </project>
